--- a/.gitignore
+++ b/.gitignore
@@ -8,28 +8,22 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
 /build
 
 # misc
 .DS_Store
-*.pem
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# local env files
-.env*.local
+.eslintcache
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
+Server/node_modules
+Server/config.js
