--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "gatsby": "^5.3.3",
     "gatsby-plugin-google-analytics": "^5.3.0",
     "gatsby-plugin-image": "^3.3.2",
@@ -26,6 +27,7 @@
     "netlify-cms-app": "^2.15.72",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.4"
   }
 }
