--- a/package.json
+++ b/package.json
@@ -1,33 +1,23 @@
 {
   "name": "michalk.nl",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
-  "description": "michalk.nl",
-  "author": "Michal",
-  "keywords": [
-    "gatsby"
-  ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.13",
-    "gatsby": "^5.3.3",
-    "gatsby-plugin-google-analytics": "^5.3.0",
-    "gatsby-plugin-image": "^3.3.2",
-    "gatsby-plugin-postcss": "^6.3.0",
-    "gatsby-plugin-sharp": "^5.3.2",
-    "gatsby-plugin-sitemap": "^6.3.1",
-    "gatsby-source-filesystem": "^5.3.1",
-    "gatsby-transformer-sharp": "^5.3.1",
-    "netlify-cms-app": "^2.15.72",
-    "postcss": "^8.4.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.4"
+    "@next/font": "13.1.6",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.5"
   }
 }
