--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0",
     "react-icons": "^4.9.0",
     "typescript": "5.0.4"
   },
