--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.2.0",
-    "@types/react": "18.2.6",
+    "@types/react": "^18.3.9",
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.9",
     "next": "13.5.4",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
     "react-icons": "^4.9.0",
