--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.2.0",
     "@types/react": "^18.3.9",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.3.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "flowbite": "^1.6.6",
